ansible/files/components/shared-mongodb-networkpolicy/network/shared-mongodb-networkpolicy-allow.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shared-mongodb-networkpolicy-allow
  namespace: shared-services
  labels:
    app.kubernetes.io/managed-by: ansible
    app.kubernetes.io/part-of: shared-databases
    cristex.io/bootstrap-writer: ansible
    cristex.io/desired-owner: argocd
    cristex.io/component: shared-mongodb-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: shared-mongodb-svc
      app.kubernetes.io/part-of: shared-databases
      cristex.io/component: mongodb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cristexhub-dev
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: cristexhub
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - backend
                  - celery-worker
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cristexhub-prod
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: cristexhub
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - backend
                  - celery-worker
        - podSelector:
            matchLabels:
              app: shared-mongodb-svc
              app.kubernetes.io/part-of: shared-databases
              cristex.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: shared-mongodb-svc
              app.kubernetes.io/part-of: shared-databases
              cristex.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
